<resources>
    <string name="app_name">TwitterClone</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_signup">No account? Go to Signup</string>
    <string name="img_logo">logo</string>
    <string name="button_logout">Logout</string>
    <string name="button_signup">Signup</string>
    <string name="text_login">Already have an account? Go to Login</string>
    <string name="hint_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>